Fixed alignment of no-results container

--- a/css/main.less
+++ b/css/main.less
@@ -174,8 +174,8 @@ footer {
 }
 
 .weather-results {
-    right: auto !important;
-    top: auto;
+    left: auto !important;
+    top: 34px !important;
 }
 
 /* ==========================================================================
